fixed image alignment and responsiveness

--- a/css/home.css
+++ b/css/home.css
@@ -43,8 +43,7 @@ body
 
 .container-fluid
 {
-    padding: 0;
-    min-height: 100vh; 
+    padding: 5vh 0vw 3vh 0vw;
 }
 
 .image
