--- a/css/vr.css
+++ b/css/vr.css
@@ -21,7 +21,10 @@ div.nav-bar
     opacity: 0.9;
 }
 
-
+.center
+{
+    text-align: center;
+}
 /* TIMELINE */
 
 .timeline {
